force-app/main/default/objects/User/fields/ExternalUserCategory__c.field-meta.xml
<CustomField>
    <fullName>ExternalUserCategory__c</fullName>
    <description>APRIL 2012 RELEASE - Type of external user</description>
    <formula>if( ISPICKVAL(UserType, &apos;Standard&apos;) , &apos;N/A&apos;, TRIM(SUBSTITUTE(SUBSTITUTE(Profile.Name, &apos;SE&apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Category (Data Visible to Partner)</label>
    <type>Text</type>
</CustomField>