force-app/main/default/objects/User/fields/UsertTest__c.field-meta.xml
<CustomField>
    <fullName>UsertTest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UsertTest</label>
    <length>30</length>
    <type>Text</type>
</CustomField>